	  ARMv7-M version (2013-03-15).
	* configs/lm4f120-launchpad/tools:  Add scripts and instructions to
	  simplify use of OpenOCD with ICDI (from JP Carballo, 2013-03-15).
	* tools/mkconfig.c:  Logic that attempts to suppressed buffered I/O
	  within the kernel is wrong.  sizeof(struct file_struct) must be
	  the same in both kernel- and user-spaces (2013-03-16).
	* arch/arm/src/common/up_pthread_start.c, libc/pthread/pthread_startup.c,
	  and related files:  Implement switch to user-space and user-space
	  pthread start-up function (2013-03-16).
	* arch/arm/src/common/up_signal_handler.c, libc/pthread/pthread_startup.c,
	  and related files:  Implement switch to user-space and user-space
	  pthread start-up function (2013-03-16).
	* arch/arm/src/common/up_signal_handler.c, libc/signal/signal_handler.c,
	  arch/arm/src/armv[6|7]-m/up_svcall.c, arch/arm/include/armv[6|7]-m/svcall.h,
	  include/nuttx/userspace.h, and sched/sig_deliver.c:  Implement switch
	  to user-space from kernel signal delivery trampoline before calling user-
	  space signal handler.  Return from user-space signal handler using a
	  system call (2013-03-16).
	* arch/arm/src/armv[6|7]-m/up_schedulesigaction.c: Need make sure we are
	  in kernel mode before switching to kernel-mode signal handler
	  trampoline (2013-03-16).
	* arch/arm/include/armv[6|7]-m/irq.h, and arch/arm/src/armv[6|7]-m/up_svcall.c:
	  Add support for nested system calls.  In the current design, this can
	  happen only under one condition:  When the kernel system call logic calls
	  back into user space in order to allocate user space memory.  So it is
	  expected that the maximum nesting level will be only 2 (2013-03-17).
	* libc/stdio/lib_sccanf.c:  Correct an error in sscanf.  If %n occurs in
	  the format statement after the input data stream has been fully
	  parsed, the %n format specifier will not be handled.  Reported by
	  Lorenz Meier (and also earlier by Kate) (2013-03-17).